--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "Layer7-MultiBypass",
-  "version": "0.0.1",
-  "main": "method.js",
-  "author": "RootSec",
-  "contributors": [
-    {
-      "name": "RootSec",
-      "email": "microfix1252002@gmail.com"
-    }
-  ],
+  "name": "newbypass",
+  "version": "1.0.0",
   "dependencies": {
+    "colors": "^1.4.0",
+    "tor-request": "^3.1.0",
+    "ws": "^7.2.1",
+    "zombie": "^6.1.4"
+  },
+  "devDependencies": {
     "cloudscraper": "^4.6.0",
-    "request": "^2.88.2"
+    "https-proxy-agent": "^5.0.0",
+    "request": "^2.88.2",
+    "socks5-http-client": "^1.0.4"
   }
 }
